# Alpha-AI

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
alpha_ai/: __init__.py
alpha_ai/agents/: orchestrator.py  planner.py  templates.py
alpha_ai/core/: auth.py  cache.py  dedup.py  logging.py  models.py  registry.py  registry.py.tmp.20656.fc515649637e  runner.py
alpha_ai/parsers/: amass.py  bloodhound.py  certipy.py  crackmapexec.py  dnsrecon.py  enum4linux.py  ffuf.py  gobuster.py  hashcat.py  hydra.py  john.py  kerbrute.py  masscan.py  nikto.py  nmap.py  nuclei.py  peass.py  searchsploit.py  secretsdump.py  sqlmap.py  subfinder.py  wfuzz.py  wpscan.py
alpha_ai/servers/: dispatcher.py  mcp_server.py  rest_api.py
alpha_ai/threat_intel/: models.py  sources.py
alpha_ai/tools/ad/: bloodhound.py  certipy.py  kerbrute.py  secretsdump.py
alpha_ai/tools/cred/: hashcat.py  hydra.py  john.py
alpha_ai/tools/exploit/: searchsploit.py
alpha_ai/tools/network/: crackmapexec.py  enum4linux.py
alpha_ai/tools/post/: _ingest.py  linpeas.py  winpeas.py
alpha_ai/tools/recon/: amass.py  dnsrecon.py  masscan.py  nmap.py  subfinder.py
alpha_ai/tools/web/: ffuf.py  gobuster.py  nikto.py  nuclei.py  sqlmap.py  wfuzz.py  wpscan.py
config/: targets.example.yaml
tests/: test_auth.py  test_dedup.py  test_dispatcher.py  test_orchestrator.py  test_parsers.py  test_parsers_more.py  test_parsers_phase3.py  test_parsers_phase4.py  test_parsers_phase5.py  test_parsers_phase6.py  test_parsers_phase7.py  test_planner.py  test_registry.py  test_runner.py
